tests/cases/errors/chandle_display_in_aggregate/main.sv
module Top;
  chandle m[string];
  initial $display("%p", m);
endmodule
